# yandex-direct-mcp

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  NOTICE  PLAN.md  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: plugin.json
.github/: dependabot.yml
.github/workflows/: pip-audit.yml  test.yml
docs/: SECURITY.md  SETUP.md  SYNC.md  token-budget.md
docs/api/: auth.rst  tools.rst
hooks/: run-server.sh  setup.sh
plugins/yandex-direct/: run-server.sh
plugins/yandex-direct/.codex-plugin/: plugin.json
plugins/yandex-direct/server/: config.py  main.py
plugins/yandex-direct/server/tools/: adextensions.py  adgroups.py  ads.py  audience.py  bidmodifiers.py  bids.py  businesses.py  campaigns.py  clients.py  creatives.py  dynamic_ads.py  dynamic_feed_ad_targets.py  feeds.py  helpers.py  keyword_bids.py  keywords.py  leads.py  negative_keyword_shared_sets.py  retargeting.py  smart_ad_targets.py  turbo_pages.py
scripts/: audit_wsdl.py  sync-marketplace-version.sh  update-version.sh
server/: config.py  contract.py  main.py
server/cli/: runner.py
server/tools/: __init__.py  adextensions.py  adgroups.py  ads.py  advideos.py  agency.py  audience.py  auth_tools.py  bidmodifiers.py  bids.py  campaigns.py  changes.py  clients.py  creatives.py  dictionaries.py  dynamic_ads.py  dynamic_feed_ad_targets.py  feeds.py  helpers.py  images.py  keyword_bids.py  keywords.py  leads.py  negative_keyword_shared_sets.py  reports.py  research.py  retargeting.py  sitelinks.py  smart_ad_targets.py  strategies.py  turbo_pages.py  v4account.py  v4adimage.py  v4events.py  v4forecast.py  v4goals.py  v4keywords.py  v4tags.py  v4wordstat.py  vcards.py
skills/direct-ads/: SKILL.md
skills/direct-eda/: SKILL.md
skills/yandex-direct/: SKILL.md
tests/: conftest.py  measure_tool_tokens.py  setup.py  test_adextensions.py  test_adgroups.py  test_ads.py  test_advideos.py  test_agency.py  test_audience.py  test_auth.py  test_bidmodifiers.py  test_bids.py  test_businesses.py  test_campaigns.py  test_changes.py  test_cli_recorder.py  test_cli_runner.py  test_clients.py  test_codex_plugin_packaging.py  test_config.py  test_creatives.py  test_dictionaries.py  test_direct_cli_0312_parity.py  test_dynamic_ads.py  test_dynamic_feed_ad_targets.py  test_extensions.py  test_feeds.py  test_hardening.py  test_helpers.py  test_images.py  test_issue_108_regression.py  test_keyword_bids.py  test_keywords.py  test_leads.py  test_live_safe.py  test_live_unsafe.py  test_negative_keyword_shared_sets.py  test_reports.py  test_research.py  test_retargeting.py  (+12 more)
tests/recordings/ads/: recording-001.json
tests/recordings/campaigns/: recording-001.json
tests/recordings/keywords/: recording-001.json
