[project]
name = "yandex-direct-mcp-plugin"
version = "0.1.10"
requires-python = ">=3.11"
dependencies = ["mcp", "direct-cli>=0.3.6"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff", "mypy", "pre-commit"]
docs = ["sphinx", "sphinx-autodoc-typehints", "furo"]

[build-system]
requires = ["setuptools>=75"]

[tool.setuptools.packages.find]
include = ["server*"]

[tool.mypy]
python_version = "3.11"
exclude = ["^plugins/"]

[tool.pytest.ini_options]
markers = [
    "mocks: tests using unittest.mock instead of cassettes",
    "integration: tests requiring live OAuth token",
    "live_safe: read-only live tests against the real Yandex.Direct API",
    "live_unsafe: mutating live tests with mandatory rollback",
]
