[project]
name = "yandex-direct-mcp-plugin"
version = "0.3.0"
requires-python = ">=3.11"
# mcp lower bound matches the version whose internal API (_tool_manager,
# _tools, Tool.fn) tool_help relies on; capped below the next major so a
# breaking rename can't slip in via an unattended upgrade.
dependencies = ["mcp>=1.23.3,<2", "direct-cli>=0.4.2"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff", "mypy", "pre-commit"]
docs = ["sphinx", "sphinx-autodoc-typehints", "furo"]

[build-system]
requires = ["setuptools>=75"]

[tool.setuptools.packages.find]
include = ["server*"]

[tool.mypy]
python_version = "3.11"
exclude = ["^plugins/"]

[tool.pytest.ini_options]
markers = [
    "mocks: tests using unittest.mock instead of cassettes",
    "integration: tests requiring live OAuth token",
    "live_safe: read-only live tests against the real Yandex.Direct API",
    "live_unsafe: mutating live tests with mandatory rollback",
]
