[project]
name = "yandex-direct-mcp-plugin"
version = "0.3.3"
requires-python = ">=3.11"
# Runtime deps are pinned to exact versions to defend against PyPI supply-chain
# changes (mcp is third-party; direct-cli is ours). Versions are kept in lockstep
# with scripts/runtime-pins.env (single source of truth) by scripts/update-pins.sh;
# tests/test_pins_consistency.py enforces alignment. Bump via the script, not by hand.
dependencies = ["mcp==1.23.3", "direct-cli==0.4.3"]

[project.urls]
Homepage = "https://github.com/nikolaymokh-dev/yandex-direct-mcp"
Repository = "https://github.com/nikolaymokh-dev/yandex-direct-mcp"

[project.scripts]
yandex-direct-mcp = "server.main:run"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff", "mypy", "pre-commit"]
docs = ["sphinx", "sphinx-autodoc-typehints", "furo"]

[build-system]
requires = ["setuptools>=75"]

[tool.setuptools.packages.find]
include = ["server*"]

[tool.mypy]
python_version = "3.11"
exclude = ["^plugins/"]

[tool.pytest.ini_options]
markers = [
    "mocks: tests using unittest.mock instead of cassettes",
    "integration: tests requiring live OAuth token",
    "live_safe: read-only live tests against the real Yandex.Direct API",
    "live_unsafe: mutating live tests with mandatory rollback",
]
